Agrego comentarios semánticos

--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
-<html>
+ <html>
     <!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Clase 02 - HTML</title>
     </head>
     <body>
+<!--Etiquetas Semánticas de HTML  -->
 
+<!-- Encabezado de la Página  -->
         <header>
-            <h1>Encabezado</h1>
+            <h1>Encabezado de la Página Web </h1>
         </header>
-
+<!-- Navegación -->
         <nav>
-            <h2> Navegacion</h2>
+            <h2> Navegación </h2> 
     </nav>
 
 <main> 
-    parte principal de la pagina
-
+   <h3> Parte Principal de la Página </h3> 
 </main>
 
+<!-- Pie de Página -->
 <footer>
-    <h4>pie de pagina </h4>
+    <h4> Pie de Página </h4>
 </footer>
 
     </body>
-    </html>
 </html>
